--- a/src/main/frontend/src/schedule/_schedule.scss
+++ b/src/main/frontend/src/schedule/_schedule.scss
@@ -56,18 +56,6 @@
 		background: #f6f6f6;
 		overflow-x: scroll;
 
-		.text-light
-		{
-			color: #fff;
-			text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.8);
-		}
-
-		.text-dark
-		{
-			color: #000;
-			text-shadow: 0px 0px 2px rgba(255, 255, 255, 0.8);
-		}
-
 		$scheduleCodeWidth: 16px;
 		/* styling for normal events */
 		.fc-event {
@@ -227,6 +215,8 @@
 		align-items: center;
 		flex-direction: row;
 		justify-content: space-between;
+		border-bottom: 0;
+
 		.modal-title {
 			display: flex;
 			flex-grow: 1;
@@ -257,24 +247,25 @@
 	}
 
 	.modal-body {
-		background-color: $white;
-		border-radius: 16px;
-		padding: 0;
-		flex-grow: 1;
-
-		$tabs-height: 42px;
+		$tabs-height: 48px;
 		.tabs-heading {
 			background-color: $grey-08;
-			height: $tabs-height;
+		}
+		.round-top {
+			border-radius: 18px 18px 0 0;
+		}
+		.round-top-left {
+			border-radius: 18px 0 0 0;
 		}
 		.nav-tabs {
-			border: 0;
-			margin: 0;
+			border-color: transparent;
 			li {
 				a {
-					border: 0;
-					margin: 0;
-					padding: 12px 48px;
+					display: flex;
+					align-items: center;
+					height: $tabs-height;
+					padding: 16px 46px;
+					border-color: transparent;
 					color: $grey-04;
 					background-color: $grey-08;
 					&:hover, &:focus {
@@ -291,14 +282,27 @@
 			}
 		}
 		.tab-pane {
-			padding: 16px;
+			padding: 0 16px 16px 16px;
 
 			.tab-bar-inputs {
 				position: absolute;
 				right: 0;
 				top: 0;
 				height: $tabs-height;
-				width: 50%;
+				width: 40%;
+				display: flex;
+				align-items: center;
+				.form-group {
+					margin-bottom: 2px;
+					select {
+						height: 22px;
+						padding: 2px 6px;
+					}
+					.icon {
+						width: 16px;
+						height: 16px;
+					}
+				}
 			}
 		}
 		.form-group {
@@ -306,100 +310,9 @@
 			display: flex;
 			align-items: center;
 
-			label {
-				font-family: "Arial", "Helvetica", sans-serif;
-				font-size: 12px;
-				font-weight: normal;
-				font-style: normal;
-				font-stretch: normal;
-				line-height: normal;
-				letter-spacing: normal;
-				text-align: right;
-				color: $grey-05;
-				padding-top: 3px;
-				padding-bottom: 3px;
-			}
-			select, input, textarea {
-				border-radius: 8px;
-				border: solid 1px $grey-07;
-				background-color: $white;
-				padding: 8px;
-
-				font-family: "Arial", "Helvetica", sans-serif;
-				font-size: 13px;
-				font-weight: normal;
-				font-style: normal;
-				font-stretch: normal;
-				line-height: normal;
-				letter-spacing: normal;
-				color: $grey-04;
-			}
 			&.label-top {
 				align-items: flex-start;
 			}
-
-			//.flex-row {
-			//	display: flex;
-			//	flex-direction: row;
-			//	align-items: center;
-			//	justify-content: flex-start;
-			//	padding: 4px 0;
-			//	&.content-center {
-			//		justify-content: center;
-			//	}
-			//	&.content-end {
-			//		justify-content: flex-end;
-			//	}
-			//	&.label-top {
-			//		align-items: flex-start;
-			//	}
-			//	&.label-center {
-			//		align-items: center;
-			//	}
-			//	.flex-row-label {
-			//		width: 80px;
-			//		padding: 0 5px;
-			//		margin: 0;
-			//		text-align: right;
-			//		&.sml {
-			//			width: 35px;
-			//		}
-			//		&.med {
-			//			width: 70px;
-			//		}
-			//	}
-			//	.flex-row-content {
-			//		text-align: left;
-			//		flex-grow: 1;
-			//	}
-			//	.juno-checkbox {
-			//		margin: 6px;
-			//	}
-			//	select, input {
-			//		border-radius: 8px;
-			//		border: solid 1px $grey-07;
-			//		background-color: $white;
-			//		padding: 8px;
-			//		&.sml {
-			//			width: 16px;
-			//		}
-			//	}
-			//	label {
-			//		font-family: "Arial", "Helvetica", sans-serif;
-			//		font-size: 12px;
-			//		font-weight: normal;
-			//		font-style: normal;
-			//		font-stretch: normal;
-			//		line-height: normal;
-			//		letter-spacing: normal;
-			//		text-align: right;
-			//		color: $grey-05;
-			//	}
-			//}
-			//.display-frame-lg {
-			//	height: 144px;
-			//	margin-bottom: 12px;
-			//}
 			.demographic-info-frame {
 				height: 144px;
 				margin-bottom: 12px;
@@ -411,28 +324,12 @@
 					margin: 0;
 
 					label {
-						font-family: "Arial", "Helvetica", sans-serif;
 						font-size: 11px;
-						font-weight: normal;
-						font-style: normal;
-						font-stretch: normal;
-						line-height: normal;
-						letter-spacing: normal;
-						text-align: right;
 						color: $grey-05;
 					}
 					span {
-						font-family: "Arial", "Helvetica", sans-serif;
 						font-size: 11px;
-						font-weight: normal;
-						font-style: normal;
-						font-stretch: normal;
-						line-height: normal;
-						letter-spacing: normal;
 						color: $grey-04;
-
-						//padding-bottom: 2px;
-						//align-self: center;
 					}
 				}
 			}
@@ -440,37 +337,7 @@
 		.alert-container {
 			height: 40px;
 		}
-		ca-info-messages {
-			height: 40px;
-		}
 
-		//.event-color {
-		//	width: 20px;
-		//	height: 20px;
-		//	display: inline-block;
-		//}
-
-		.bottom-buttons {
-			.btn {
-				color: $primary;
-				background-color: $white;
-				border: solid 1px $grey-07;
-				font-weight: bold;
-				width: 128px;
-				height: 40px;
-
-				&.btn-success {
-					color: $white;
-					background-color: $green;
-					border: solid 1px $green-hover;
-				}
-				&.btn-primary {
-					color: $white;
-					background-color: $primary;
-					border: solid 1px $primary-hover;
-				}
-			}
-		}
 
 		//&.legend {
 		//	.event-color {
@@ -546,6 +413,12 @@
 		//		height: 34px;
 		//	}
 		//}
+	}
+
+	.modal-footer {
+		.bottom-buttons {
+
+		}
 	}
 }
 
